# t

./: AGENTS.md  Cargo.toml  Justfile  README.md  flake.nix  lefthook.yml
.github/workflows/: ci.yml  release.yml
benches/: columnate.rs  join.rs  split.rs
scripts/: t
src/: ast.rs  error.rs  interactive.rs  interpreter.rs  lib.rs  main.rs  operators.rs  parser.rs  value.rs
src/interactive/: help.rs  json.rs  mod.rs  text.rs
src/operators/: case.rs  columnate.rs  count.rs  dedupe.rs  delete_empty.rs  filter.rs  flatten.rs  group.rs  join.rs  match_all.rs  mod.rs  navigate.rs  number.rs  partition.rs  replace.rs  select.rs  sort.rs  split.rs  sum.rs  trim.rs
