[package]
name = "t"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
csv = "1.3"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
winnow = "0.7.14"
yansi = "1.0.1"
dirs = "6.0"

[dev-dependencies]
criterion = "0.5"
regex = "1.12.2"

[[bench]]
name = "columnate"
harness = false

[[bench]]
name = "split"
harness = false

[[bench]]
name = "join"
harness = false

[[bench]]
name = "case"
harness = false

[[bench]]
name = "replace"
harness = false

[[bench]]
name = "dedupe"
harness = false

[[bench]]
name = "select"
harness = false

[[bench]]
name = "group"
harness = false
